2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* pinfo.cc (_pinfo::set_ctty): *Always* call close on opened ctty since
	it counts as an opened handle.

2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (fhandler_tty_master::fixup_after_fork): Remove
	declaration.
	(fhandler_tty_master::fixup_after_exec): Ditto.
	* fhandler_tty.cc (fhandler_tty_master::init): Fix so that children do
	not inherit master tty handles.
	(fhandler_tty_master::fixup_after_fork): Remove, since it was never
	used.
	(fhandler_tty_master::fixup_after_exec): Ditto.
	* pinfo.cc (_pinfo::set_ctty): Increment open_fhs when ctty is set.
	* cygheap.cc (cygheap_init): Ditto.
	* syscalls.cc (setsid): *Always* call close on opened ctty since the
	archetype is associated with the ctty and it counts as an opened
	handle.
	* tty.cc (tty::common_init): Don't protect input/output mutex since it
	confuses subsequent fork/execs when CYGWIN=tty.

2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (try_to_debug): Fix off-by-one problem when resetting
	environment variable after error_start detected.

	* fhandler_tty_slave.cc (fhandler_tty_slave::close): Clarify debug
	message.
	* syscalls.cc (setsid): Don't increment usecount here, since it will be
	automatically decremented on close.

2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (setup_handler): Protect against a race.

2003-12-26  Christopher Faylor  <cgf@redhat.com>

	* path.cc (mount_item::build_win32): Backslashify paths in non-managed
	case.

2003-12-25  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (reent_data): Reluctantly resurrect.
	(__cygwin_user_data::impure_ptr): Ditto.
	(_dll_crt0): Reluctantly initialize _impure_ptr here.
	(initialize_main_tls): Eliminate local_clib initialization since it now
	happens in init_thread.
	* init.cc (dll_entry): Reluctantly remove code which set _impure_ptr to
	the main thread's local_clib.
	* perthread.h (reent_data): Remove obsolete declaration.
